fee (floyd) 10/27/2002
----------------------
 + updated various PoP maps
 + update to handled compressed item data for merchants
 + update to EQDecode to handle new crypto

casey 10/26/2002
----------------------
 + src/interface.cpp
   + applied baelang's patch to fix transposed strings in player_classes[]

fee (floyd) 10/26/2002
----------------------
 + bug fix: tweaked spawnshell to track ground spanws more accuratly
 + updated makeDropStruct to fit current packet (resolves the map scaling)

fee (floyd) 10/25/2002
----------------------
 + Version 4.3.0
 + update spawnStruct
 + update opcode, thanks to all who helped find them
 + update EQDecode class in preparation for a new libEQ, if such time as
   one becomes available
 + update spells.h

casey (10/24/02)
----------------------

added the following maps.
  Poinnovation.map

updated 3 structs and a bunch of opcodes.  I havent personally tested
them, but they seem to be working for the people who are.  If you find
differences, make a diff and post it to the patch section.

casey (10/21/02)
----------------------

added the following maps (from HoiHoi).
  Hohonora.map
  Hohonorb.map
  Nightmareb.map
  Poknowledge.map
  Potranquility.map
  Powar.map
  Solrotower.map

ratt (3 Oct 02)
----------------------

Fixed the max HP bug that was reporting more HP than you really had.

Released ShowEQ v4.2.15 in the file release section.  This is a 
current CVS snapshot as of this moment. (13:00 EST 3 Oct 02)

fee (floyd) (10/03/02)
----------------------
 + version 4.2.15
New Features:
  GuildMgr Class
     captures guilds2.dat from worldserver
     reads the regular eq client guilds2.dat (File->Reload Guilds File)
     dump a plain text list of guild id to guild tag (Debug->List/Dump Guild Info)
     filter and category support for spawnlists(regex on 'Guild:')
     map tip support
     spawnlog support, guild id added as last field in the output
Updates:
    random clean ups
    new guildlist structs